<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.example</groupId>
	<artifactId>take-http</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>take-http</name>
	<description>take-http</description>
	<properties>
		<java.version>19</java.version>
		<compiler.source>19</compiler.source>
		<compiler.target>19</compiler.target>
		<!-- plugin versions -->
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<maven-shade-plugin.version>3.4.0</maven-shade-plugin.version>
		<!-- dependency versions -->
		<takes.version>1.24.4</takes.version>
		<lombok.version>1.18.24</lombok.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.takes</groupId>
			<artifactId>takes</artifactId>
			<version>${takes.version}</version>
		</dependency>
		<!-- PROVIDED -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<!-- COMPILER -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${compiler.source}</source>
					<target>${compiler.target}</target>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<!-- SHADER - Create a single JAR file with main class and all the dependencies extracted -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
										implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.example.take.TakeApplication</mainClass>
								</transformer>
							</transformers>
							<finalName>TakeApplication</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
